# pallas

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  codemeta.json  composer.json  daux.json  daux_search_index.js  flake.nix  index.html  justfile  modif_pallas.md  package.json  pyproject.toml  quick_start.html
analyzing_pallas/: index.html
analyzing_pallas/build_analysis/: index.html
analyzing_pallas/generalities/: index.html
analyzing_pallas/native_analysis/: .1_pallas_print.html  .2_pallas_info.html  .3_pallas_editor.html  .4_communication_matrix.html  .5_contention_score.html  .6_histograms.html  communication_matrix.html  contention_score.html  histograms.html  index.html  pallas_editor.html  pallas_info.html  pallas_print.html
api_reference/: index.html
apps/: CMakeLists.txt  pallas_config.cpp  pallas_durations.cpp  pallas_editor.cpp  pallas_getTimestamps.cpp  pallas_info.cpp  pallas_print.cpp  pallas_sync.cpp  pallas_test_durations.cpp
docker/: Dockerfile_eztrace_pallas  Dockerfile_pallas  Dockerfile_pallas_intel  Dockerfile_pallas_test  publish_docker_images.sh  publish_example_docker_images.sh  publish_test_docker_images.sh
docs/: 01-quick-start.md  02-pallas.md  Makefile  README.md  _sidebar.md  config.json  index.html  index.md  pallas_python_example.ipynb
docs/01-quick-start/: 01-quick-start.md  quick-start.md
docs/02-pallas/: 01-presentation.md  02-installing-pallas.md  03-tracing-examples.md  README.md
docs/02-pallas/01-presentation/: index.md  mermaid.md
docs/02-pallas/02-installing-pallas/: README.md
docs/02-pallas/03-installing-eztrace-pallas/: index.md
docs/02-pallas/03-tracing-examples/: index.md
docs/02-pallas/03-tracing-examples/01-multithread/: README.md
docs/02-tracing-otf2/: README.md  index.md
docs/02-tracing-otf2/01-installing-otf2/: index.md
docs/02-tracing-otf2/02-installing-eztrace/: README.md  index.md
docs/02-tracing-otf2/03-tracing-mpi/: 3.1-generalities.md  3.2-example-nas-benchmarks.md  3.3-example-lulesh.md  3.4-example-quicksilver.md  index.md
docs/02-tracing-otf2/04-tracing-other-parallel/: 4.1-openmp-ompt.md  4.2-pthread.md  4.3-mpi-x.md  4.4-cuda.md  4.5-starpu.md  README.md  index.md
docs/02-tracing-otf2/05-create-plugin/: README.md  index.md
docs/03-tracing-pallas/: README.md  index.md
docs/03-tracing-pallas/01-presentation/: index.md
docs/03-tracing-pallas/02-installing-pallas/: README.md
docs/03-tracing-pallas/03-installing-eztrace-pallas/: index.md
docs/03-tracing-pallas/04-tracing-mpi/: 4.1-generalities.md  4.3-example-lulesh.md  index.md
docs/03-tracing-pallas/05-tracing-other-parallel/: 5.1-openmp-ompt.md  5.2-pthread.md  5.3-mpi-x.md  5.4-cuda.md  5.5-starpu.md  README.md  index.md
docs/03-tracing-pallas/06-trace-own-library/: README.md
docs/04-analyzing-pallas/: README.md  index.md
docs/04-analyzing-pallas/01-generalities/: README.md  index.md
docs/04-analyzing-pallas/02-native-analysis/: 2.1-pallas-print.md  2.2-pallas-info.md  2.3-pallas-editor.md  2.4-communication-matrix.md  2.5-contention-score.md  2.6-histograms.md  README.md  index.md
docs/04-analyzing-pallas/03-build-analysis/: README.md  index.md
docs/05-visualizing-blup/: index.md
docs/05-visualizing-blup/01-generalities/: README.md  index.md
docs/05-visualizing-blup/02-open-trace/: README.md  index.md
docs/05-visualizing-blup/03-other-functionalities/: README.md  index.md
docs/06-api-reference/: README.md  index.md
docs/06-api-reference/02-python/: README.md
libraries/otf2/: otf2_config.in
libraries/otf2/src/: OTF2_Archive.c  OTF2_DefWriter.c  OTF2_EvtWriter.c  OTF2_GlobalDefWriter.c  OTF2_Reader.cpp  otf2_print.c
libraries/pallas/: CMakeLists.txt  Doxyfile.in
libraries/pallas/src/: pallas.cpp  pallas_archive.cpp  pallas_attribute.cpp  pallas_buffer.cpp  pallas_dbg.cpp  pallas_hash.cpp  pallas_linked_vector.cpp  pallas_parameter_handler.cpp  pallas_read.cpp  pallas_record.cpp  pallas_storage.cpp  pallas_timestamp.cpp  pallas_write.cpp
libraries/pallas_python/: CMakeLists.txt  pallas_python.cpp  pallas_python.h  python_analysis.cpp  python_analysis.h  python_read.cpp  python_read.h  python_tokens.cpp  python_tokens.h
libraries/pallas_python/pallas_trace/: __init__.py  __init__.pyi
quick_start/: quick_start.html
scripts/: publish_docs_to_github.sh
test/: CMakeLists.txt  find_loop.cpp  sequence_durations.cpp  snapshot.cpp  test_hash.cpp  test_snapshot.cpp  test_stark_trace.sh  test_utils.sh  test_vector.cpp  write_benchmark.c  write_benchmark.cpp  write_pattern.cpp
test/mpi/: CMakeLists.txt  mpi_benchmark.c
themes/daux_blue/: custom.css
tracing_otf2/: index.html
tracing_otf2/create_plugin/: index.html
tracing_otf2/installing_eztrace/: index.html
tracing_otf2/installing_otf2/: index.html
tracing_otf2/tracing_mpi/: .1_generalities.html  .2_example_nas_benchmarks.html  .3_example_lulesh.html  .4_example_quicksilver.html  example_lulesh.html  example_nas_benchmarks.html  example_quicksilver.html  generalities.html  index.html
tracing_otf2/tracing_other_parallel/: .1_openmp_ompt.html  .2_pthread.html  .3_mpi_x.html  .4_cuda.html  .5_starpu.html  cuda.html  index.html  mpi_x.html  openmp_ompt.html  pthread.html  starpu.html
tracing_pallas/: index.html
tracing_pallas/installing_eztrace_pallas/: index.html
tracing_pallas/installing_pallas/: index.html
tracing_pallas/presentation/: index.html
tracing_pallas/trace_own_library/: index.html
tracing_pallas/tracing_mpi/: .1_generalities.html  .2_example_nas_benchmarks.html  .3_example_lulesh.html  .4_example_quicksilver.html  example_lulesh.html  example_nas_benchmarks.html  example_quicksilver.html  generalities.html  index.html
tracing_pallas/tracing_other_parallel/: .1_openmp_ompt.html  .2_pthread.html  .3_mpi_x.html  .4_cuda.html  .5_starpu.html  cuda.html  index.html  mpi_x.html  openmp_ompt.html  pthread.html  starpu.html
visualizing_blup/: index.html
visualizing_blup/generalities/: index.html
visualizing_blup/open_trace/: index.html
visualizing_blup/other_functionalities/: index.html
(+29 files in other folders)
